--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,43 @@
 .App {
   text-align: right;
   background-color: #dee3e2;
+  height: 400px;
+  margin-bottom: 10px;
+}
+
+.content-text{
+  text-align: center;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: #dee3e2;
+  height: 200px;
+}
+
+.content-discount{
+  text-align: center;
+  padding-top: 20px;
+  padding-right: 40px;
+  background-color: #ff7272;
+  height: 150px;
+}
+
+.content-footer{
+  text-align: center;
+  padding-top: 20px;
+  background-color: #dee3e2;
+  height: 250px;
+}
+
+.discount-text{
+  text-align: left;
+  padding-left: 200px;
 }
 
 .app-text{
   text-align: left;
-  padding-top: 50px;
-  padding-left: 100px;
+  padding-top: 70px;
+  padding-left: 170px;
 }
 
 .App-logo {
@@ -81,8 +112,8 @@
 }
 
 .img-sepatu {
-  width: 500px;
-  height: 250px;
+  width: 700px;
+  height: 400px;
   object-fit: cover;
 }
 
