--- a/src/component/Women/Women.css
+++ b/src/component/Women/Women.css
@@ -1,1 +1,41 @@
 @import '~antd/dist/antd.css';
+
+.App-women{
+    text-align: left;
+    background-color: #000000;
+    height: 400px;
+}
+
+.content-discount-women{
+    text-align: center;
+    padding-top: 20px;
+    padding-right: 40px;
+    background-color: yellow;
+    height: 150px;
+}
+.discount-text-women{
+    text-align: left;
+    padding-left: 200px;
+}
+
+.img-sepatu-women {
+    width: 720px;
+    height: 400px;
+    object-fit: cover;
+  }
+
+.app-text-women{
+    text-align: right;
+    padding-top: 70px;
+    padding-left: 30px;
+    padding-right: 170px;
+}
+
+.content-text-women{
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 120px;
+    padding-right: 120px;
+    background-color: #dee3e2;
+    height: 200px;
+}
