--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   padding-top: 20px;
   padding-left: 120px;
   padding-right: 120px;
-  background-color: #dee3e2;
+  background-color: #ffffff;
   height: 200px;
 }
 
@@ -26,7 +26,7 @@
 .content-footer{
   text-align: center;
   padding-top: 20px;
-  background-color: #dee3e2;
+  background-color: #ffffff;
   height: 250px;
 }
 
@@ -89,15 +89,16 @@
 
 .ant-layout-header{
   text-align: center;
+  background-color: white;
 }
 
 .site-card-wrapper{
-  text-align: left;
+  text-align: center;
   margin-top: 10px;
 }
 
 .ant-layout-content{
-  background-color: grey;
+  background-color: white;
 }
 
 .ant-row row-list{
@@ -108,9 +109,6 @@
   padding: 0 50px;
 }
 
-.ant-col ant-col-12 app-text{
-  
-}
 
 .img-sepatu {
   width: 700px;
