--- a/src/component/Women/Women.css
+++ b/src/component/Women/Women.css
@@ -1,6 +1,12 @@
 @import '~antd/dist/antd.css';
 
 .App-women{
+    text-align: right;
+    background-color: pink;
+    height: 400px;
+}
+
+.App-women2{
     text-align: left;
     background-color: #000000;
     height: 400px;
@@ -36,6 +42,6 @@
     padding-top: 20px;
     padding-left: 120px;
     padding-right: 120px;
-    background-color: #dee3e2;
+    background-color: #ffffff;
     height: 200px;
 }
